@@ -1,7 +1,7 @@
 import xerial.sbt.Sonatype._
 import sbtassembly.AssemblyPlugin.autoImport._
 
-lazy val versionNum: String = "0.8.6"
+lazy val versionNum: String = "0.8.7"
 lazy val scala212 = "2.12.20"
 lazy val scala213 = "2.13.16"
 lazy val supportedScalaVersions = List(scala212, scala213)
@@ -98,6 +98,22 @@ lazy val pluginspark3 = (project in file("pluginspark3"))
     // Include source and resources from plugin directory for tests
     Test / unmanagedSourceDirectories += (plugin / Compile / sourceDirectory).value / "scala",
 
+    // Fork JVM for tests so javaOptions are applied; required for Spark on Java 9+
+    Test / fork := true,
+    // Run test suites sequentially — parallel suites share the SparkSession via getOrCreate()
+    // and one suite stopping the session causes NPEs in concurrently-running suites
+    Test / parallelExecution := false,
+    Test / javaOptions ++= {
+      // --add-opens is not supported on Java 8 (spec version starts with "1.")
+      if (sys.props("java.specification.version").startsWith("1.")) Seq.empty
+      else Seq(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+      )
+    },
   )
 
 lazy val pluginspark4 = (project in file("pluginspark4"))
